Update inventory
