# order-service/entity/order_entity.go
@@ -1,8 +1,9 @@
 package entity
 
 type ReserveStockRequest struct {
-	ProductID int64
-	Quantity  int64
+	ProductID      int64
+	Quantity       int64
+	IdempotencyKey string
 }
 
 type ReleaseStockRequest struct {
